--- a/src/phonebook_frontend/src/index.html
+++ b/src/phonebook_frontend/src/index.html
@@ -1,24 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>phonebook</title>
-    <base href="/" />
-    <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
-      <br />
-      <br />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>proj3</title>
+  <base href="/" />
+  <link rel="icon" href="favicon.ico" />
+  <link type="text/css" rel="stylesheet" href="main.css" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+
+</head>
+
+<body ng-app="addrBook" ng-controller="myCtrl">
+  <div class="container">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="panel-title">
+          <h3 class="text-center">Phone Book Prototype Project</h3>
+        </div>
+      </div>
+      <div class="panel-body">
+        <h5>Search Contact</h5>
+        <form class="form-horizontal" id="search_contact_form">
+          <div class="form-group has-info has-feedback">
+            <div class="col-sm-5">
+              <input type="text" name="search" ng-model="test" class="form-control" id="search_name">
+            </div>
+          </div>
+          <button type="submit">Search</button>
+        </form>
+        <p id="error"></p>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Contacts</th>
+                <th>Phone Number</th>
+                <th>Desc</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="x in info | filter:test">
+                <td><span ng-hide="showMe($index)"></span><input text="text" class="form-control input-sm"
+                    ng-model="x.name" ng-show="showMe($index)" id="search_name_data" disabled="true"></td>
+                <td><span ng-hide="showMe($index)"></span><input text="text" class="form-control input-sm"
+                    ng-model="x.tel" ng-show="showMe($index)" id="search_phone_number"></td>
+                <td><span ng-hide="showMe($index)"></span><input text="text" class="form-control input-sm"
+                    ng-model="x.tel" ng-show="showMe($index)" id="search_desc"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <button type="submit" id="Update" disabled>Update</button>
+        <button type="submit" id="delete" disabled>Delete</button>
+      </div>
+      <div class="panel-footer">
+        <h5>Add Contact</h5>
+        <form class="form-inline" id="add_contact_form">
+          <div class="form-group">
+            <span>Name：</span>
+            <input type="text" class="form-control" ng-model="newName" id="name">
+          </div>
+          <div class="form-group">
+            <span>Tel：</span>
+            <input type="text" class="form-control" ng-model="newTel" id="phone_number">
+          </div>
+          <div class="form-group">
+            <span>Desc:</span>
+            <input type="text" class="form-control" ng-model="newTel" id="desc">
+          </div>
+          <button type="submit" class="btn btn-primary btn-sm">Add</button>
+          <span id="response"></span>
+        </form>
+      </div>
+      <br>
+      <hr>
+      <h5>Diplay all the contacts in the directory</h5>
+      <button type="submit" id="show_all_contact">Show All</button>
+      <div id="show_contacts" style="display: none;">
+        <table id="customers">
+          <thead>
+            <tr>
+              <th>Contacts</th>
+              <th>Phone Number</th>
+              <th>Desc</th>
+            </tr>
+          </thead>
+          <tbody id="contact_conatainer">
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
